--- a/index.html
+++ b/index.html
@@ -316,6 +316,18 @@
             </div>
     </section>
 
+    <!-- section Newsletter -->
+    <section id="newsletter">
+        <div class="newstext">
+            <h4>Inscrivez-vous à notre Newsletter</h4>
+            <p>Rejoignez notre communauté pour bénéficier de 10 % de réduction sur votre première commande</p>
+            <div class="form">
+                <input type="text" placeholder="Saisir votre email">
+                <button>Envoyer</button>
+            </div>
+        </div>
+    </section>
+
     <script src="https://kit.fontawesome.com/3fe3cc7820.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </body>
