--- a/index.html
+++ b/index.html
@@ -317,16 +317,72 @@
     </section>
 
     <!-- section Newsletter -->
-    <section id="newsletter">
+    <section id="newsletter" class="section-p1 section-m1">
         <div class="newstext">
             <h4>Inscrivez-vous à notre Newsletter</h4>
             <p>Rejoignez notre communauté pour bénéficier de 10 % de réduction sur votre première commande</p>
-            <div class="form">
-                <input type="text" placeholder="Saisir votre email">
-                <button>Envoyer</button>
-            </div>
+        </div>
+        <div class="form">
+            <input type="text" placeholder="Saisir votre email">
+            <button class="normal">Envoyer</button>
         </div>
     </section>
+
+    <!-- section Footer -->
+    <footer class="section-p1">
+        <div class="col">
+            <h4>Coordonnées</h4>
+            <p><strong>Adresse:</strong> 1 rue de Paris 75008 Paris</p>
+            <p><strong>Téléphone:</strong> 01 23 53 42 98</p>
+            <p><strong>Horaire d'ouverture:</strong> 10h - 18h , Du Lundi au Samedi</p>
+            <div class="follow">
+                <h4>Suivez la communauté</h4>
+                <div class="icon">
+                    <i class="fa-brands fa-meta"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-tiktok"></i>
+                    <i class="fa-solid fa-x"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <div>
+                        <img class="logo" src="Asset/image/LogoHb1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <h4>Politiques</h4>
+            <a href="#">Retours et remboursement</a>
+            <a href="#">Politique de confidentialité</a>
+            <a href="#">Conditions de vente</a>
+            <a href="#">Politique d'expédition</a>
+            <a href="#">Mention légale</a>
+        </div>
+
+        <div class="col">
+            <h4>À propos</h4>
+            <a href="#">Boutique</a>
+            <a href="#">Suivi de commande</a>
+            <a href="#">Notre histoire</a>
+            <a href="#">Faq</a>
+            <a href="#">Contactez-nous</a>
+        </div>
+
+        <div class="colinstall">
+            <h4>Install App</h4>
+            <p>From App Store or Google Play</p>
+            <div class="row">
+                <img src="Asset/image/Apple-Google-Pay-Logos-Translucent.png" alt="">
+                <!-- <img src="Asset/image/AmericanExpress.png" alt=""> -->
+            </div>
+            <p>Secured Payment Gateways</p>
+            <img src="Asset/image/paiement_NM-768x243.png" alt="">
+        </div>
+
+        <div class="copyright">
+            <p>© 2025, Horizons Blanc - Tous droits réservés</p>
+        </div>
+    </footer>
 
     <script src="https://kit.fontawesome.com/3fe3cc7820.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
