--- a/index.html
+++ b/index.html
@@ -19,12 +19,19 @@
         <div>
             <ul id="navbar">
                 <li><a class="active" href="index.html">Accueil</a></li>
-                <li><a href="shop.html">Boutique</a></li>
+                <li><a href="product.html">Boutique</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">À propos</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
+                <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
+                <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
             </ul>
+        </div>
+        <!-- section mobile barre menu affichage (responsive) -->
+        <div id="mobile">
+            <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
+            <i id="bar" class="fas fa-outdent"></i>
+
         </div>
     </section>
 
