--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,186 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Horizons Blanc</title>
+    <title>Contact | Horizons Blanc</title>
+
+    <!-- CSS principal -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Icônes FontAwesome (comme sur la home) -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/release/v5.10.0/css/all.css" />
 </head>
 
 <body>
 
-    <section class="navbar">
-        <a href="index.html"><img src="/Asset/image/LogoHb1.png" class="logo" alt=""></a>
+    <!-- Bandeau info (optionnel, comme sur l'index) -->
+    <section id="welcome">
+        <h4>Besoin d'aide ? Contactez notre équipe dédiée</h4>
+    </section>
+
+    <!-- Header / Navbar identique au site principal -->
+    <section id="header">
+        <a href="index.html"><img src="/Asset/image/LogoHb1.png" class="logo" alt="Logo Horizons Blanc"></a>
         <div>
-            <ul id="menuAccueil">
+            <ul id="navbar">
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="suiviCommande.html">Suivi de commande</a></li>
+                <li><a href="shop.html">Boutique</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="about.html">À propos</a></li>
+                <li><a class="active" href="contact.html">Contact</a></li>
+                <li id="lg-bag"><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
+                <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
             </ul>
+        </div>
+
+        <!-- Menu mobile -->
+        <div id="mobile">
+            <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
+            <i id="bar" class="fas fa-outdent"></i>
         </div>
     </section>
 
-    <section class="headerContact">
-        <h1>Enrichissez vos voyages</h1>
-        <h3>Un sac qui vous suit partout, sans jamais se faire remarquer.</h3>
-        <a href="index.html" class="btn">Explorez</a>
-    </section>
+    <main>
 
+        <!-- Hero Contact -->
+        <section id="hero" style="background-image: url('Asset/image/Hbaccueilpage.png'); height: 50vh;">
+            <h4>Service Client Horizons Blanc</h4>
+            <h1>Enrichissez vos voyages, on s'occupe du reste</h1>
+            <h2>Contactez notre équipe dédiée</h2>
+            <p>Une question sur un produit, une commande ou un retour ? Écrivez-nous, nous vous répondrons rapidement.
+            </p>
+        </section>
+
+        <!-- Bloc Contact / Formulaire -->
+        <section class="section-p1" id="contact">
+            <div style="display:flex; flex-wrap:wrap; gap:40px; align-items:flex-start;">
+
+                <!-- Infos de contact -->
+                <div style="flex:1 1 280px; min-width:260px;">
+                    <h2>Nous contacter</h2>
+                    <p>Remplissez le formulaire ou utilisez les coordonnées ci-dessous.</p>
+
+                    <h4>Coordonnées</h4>
+                    <p><strong>Adresse :</strong> 1 rue de Paris, 75008 Paris</p>
+                    <p><strong>Téléphone :</strong> 01 23 53 42 98</p>
+                    <p><strong>E-mail :</strong> contact@horizonsblanc.fr</p>
+
+                    <h4>Horaires du support</h4>
+                    <p>Du lundi au samedi : 10h - 18h</p>
+                </div>
+
+                <!-- Formulaire -->
+                <div style="flex:1 1 320px; min-width:280px;">
+                    <h2>Envoyer un message</h2>
+                    <form action="#" method="post" style="display:flex; flex-direction:column; gap:15px;">
+
+                        <div>
+                            <label for="name">Nom complet</label><br>
+                            <input type="text" id="name" name="name" placeholder="Votre nom" required
+                                style="width:100%; padding:10px; border-radius:5px; border:1px solid #ccc;">
+                        </div>
+
+                        <div>
+                            <label for="email">Adresse e-mail</label><br>
+                            <input type="email" id="email" name="email" placeholder="vous@example.com" required
+                                style="width:100%; padding:10px; border-radius:5px; border:1px solid #ccc;">
+                        </div>
+
+                        <div>
+                            <label for="subject">Objet</label><br>
+                            <input type="text" id="subject" name="subject" placeholder="Sujet de votre demande"
+                                style="width:100%; padding:10px; border-radius:5px; border:1px solid #ccc;">
+                        </div>
+
+                        <div>
+                            <label for="message">Message</label><br>
+                            <textarea id="message" name="message" rows="6" placeholder="Écrivez votre message ici..."
+                                required
+                                style="width:100%; padding:10px; border-radius:5px; border:1px solid #ccc; resize:vertical;"></textarea>
+                        </div>
+
+                        <button type="submit" class="normal">Envoyer le message</button>
+                    </form>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- section Newsletter -->
+        <section id="newsletter" class="section-p1 section-m1">
+            <div class="newstext">
+                <h4>Inscrivez-vous à notre Newsletter</h4>
+                <p>Rejoignez notre communauté pour bénéficier de 10 % de réduction sur votre première commande</p>
+            </div>
+            <div class="form">
+                <input type="text" placeholder="Saisir votre email">
+                <button class="normal">Envoyer</button>
+            </div>
+        </section>
+
+    </main>
+
+    <!-- section Footer -->
+    <footer class="section-p1">
+        <div class="col">
+            <h4>Coordonnées</h4>
+            <p><strong>Adresse:</strong> 1 rue de Paris 75008 Paris</p>
+            <p><strong>Téléphone:</strong> 01 23 53 42 98</p>
+            <p><strong>Horaire d'ouverture:</strong> 10h - 18h , Du Lundi au Samedi</p>
+            <div class="follow">
+                <h4>Suivez la communauté</h4>
+                <div class="icon">
+                    <i class="fa-brands fa-meta"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-tiktok"></i>
+                    <i class="fa-solid fa-x"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <div>
+                        <img class="logo" src="Asset/image/LogoHb1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <h4>Politiques</h4>
+            <a href="#">Retours et remboursement</a>
+            <a href="#">Politique de confidentialité</a>
+            <a href="#">Conditions de vente</a>
+            <a href="#">Politique d'expédition</a>
+            <a href="#">Mention légale</a>
+        </div>
+
+        <div class="col">
+            <h4>À propos</h4>
+            <a href="#">Boutique</a>
+            <a href="#">Suivi de commande</a>
+            <a href="#">Notre histoire</a>
+            <a href="#">Faq</a>
+            <a href="#">Contactez-nous</a>
+        </div>
+
+        <div class="colinstall">
+            <h4>Install App</h4>
+            <p>From App Store or Google Play</p>
+            <div class="row">
+                <img src="Asset/image/Apple-Google-Pay-Logos-Translucent.png" alt="">
+                <!-- <img src="Asset/image/AmericanExpress.png" alt=""> -->
+            </div>
+            <p>Secured Payment Gateways</p>
+            <img src="Asset/image/paiement_NM-768x243.png" alt="">
+        </div>
+
+        <div class="copyright">
+            <p>© 2025, Horizons Blanc - Tous droits réservés</p>
+        </div>
+    </footer>
+
+    <!-- FontAwesome + JS du menu -->
+    <script src="https://kit.fontawesome.com/3fe3cc7820.js" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
