responsiveLogo et header

--- a/about.html
+++ b/about.html
@@ -57,7 +57,8 @@
                 align-items: center;
             ">
                 <div style="flex: 1 1 350px;">
-                    <img src="Asset/image/aboutNordicVillage.png" style="width:100%; border-radius:12px;" alt="">
+                    <img src="Asset/image/photo-er-capucine-cardot-1621851601.jpg"
+                        style="width:100%; border-radius:12px;" alt="">
                 </div>
 
                 <div style="flex: 1 1 350px;">
@@ -79,18 +80,16 @@
 
         <!-- HISTOIRE / CHAPITRE 2 -->
         <section style="margin-top: 80px;">
-            <div style="
-                display: flex;
+            <div style=" display: flex;
                 flex-direction: row-reverse;
                 flex-wrap: wrap;
                 gap: 40px;
-                align-items: center;
-            ">
-                <div style="flex: 1 1 350px;">
-                    <img src="Asset/image/aboutLuxuryFabric.png" style="width:100%; border-radius:12px;">
+                align-items: center;">
+                <div class="imgAbout">
+                    <img src="Asset/image/hommeDeLuxe.png" style="width:100%; border-radius:12px;">
                 </div>
 
-                <div style="flex: 1 1 350px;">
+                <div class="imgAbout">
                     <h2>Le luxe silencieux : notre signature</h2>
                     <p>
                         À Horizons Blanc, nous croyons en un luxe discret.
@@ -119,11 +118,11 @@
                 gap:40px;
                 align-items:center;
             ">
-                <div style="flex:1 1 350px;">
+                <div class="imgAbout">
                     <img src="Asset/image/aboutExpeditionTeam.png" style="width:100%; border-radius:12px;">
                 </div>
 
-                <div style="flex:1 1 350px;">
+                <div class="imgAbout">
                     <h2>Testée dans les conditions les plus extrêmes</h2>
                     <p>
                         Nos vêtements sont conçus et testés avec des équipes d’expédition :
@@ -135,8 +134,7 @@
                         est mis à l’épreuve à -20°C, -30°C, parfois plus.
                     </p>
 
-                    <p>
-                        C’est cette exigence qui garantit que nos pièces
+                    <p>C’est cette exigence qui garantit que nos pièces
                         ne sont pas seulement belles — elles sont performantes.
                     </p>
                 </div>
@@ -216,7 +214,6 @@
             <p>From App Store or Google Play</p>
             <div class="row">
                 <img src="Asset/image/Apple-Google-Pay-Logos-Translucent.png" alt="">
-                <!-- <img src="Asset/image/AmericanExpress.png" alt=""> -->
             </div>
             <p>Secured Payment Gateways</p>
             <img src="Asset/image/paiement_NM-768x243.png" alt="">
